--- a/index.html
+++ b/index.html
@@ -5,6 +5,12 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<title>Profil: Jana Czechita</title>
 		<link rel="stylesheet" type="text/css" href="style.css">
+		<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@400;700&display=swap" rel="stylesheet">
 	</head>
 	<body>
 
@@ -12,7 +18,7 @@
 
 			<div class="hlavicka">
 
-				<img class="foto" src="images/foto.jpg" alt="Foto Jany Czechity">
+				<img class="foto" src="images/foto.jpg" alt="Foto Jany Czechity" width= "300px">
 
 				<img class="logo" src="images/logo.svg" width="50" height="50" alt="Logo Czechitas">
 
